@@ -12,6 +12,15 @@
 # ====================================================================
 
 
+# 2016-12-20
+# --------------------------------------------------------------------
+# 
+# + now only crystals with 2 or more signals get TFractionFitter
+# + need at least 2 MC for TFractionFitter to work
+# - do not add the bkgs to the total MC from the fit - the data is
+#   already bkg subtracted
+
+
 # 2016-12-17
 # --------------------------------------------------------------------
 # ~ can now arbitrarily set backgrounds and signals per crystal
